[package]
name = "mqtt2graphite"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
config = { version = "0.15.19", features = ["toml"] }
graphyne = "0.2.2"
rumqttc = "0.25.1"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "2.0.17"
tokio = { version = "1.37.0", features = ["full"] }
log = "0.4.21"
env_logger = "0.11.3"
